disable blur for modals on mobile, fix #104

--- a/assets/style/layout.less
+++ b/assets/style/layout.less
@@ -9,17 +9,6 @@ body {
     }
     min-height: 100%;
     position: relative;
-
-    #main {
-        transition:filter .3s;
-        -webkit-transition:-webkit-filter .3s;
-        -webkit-filter:blur(0);
-        filter:blur(0);
-    }
-    &.modal-open #main {
-        -webkit-filter:blur(2px);
-        filter: blur(2px);
-    }
 }
 
 .page {
